--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BANCO_STRING="mongodb+srv://API:1234@cluster0.9rqhqsn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+BANCO_STRING=""
 SERVER_PORT="3000"
